ECO-1: Upgrade to URI usage instead of deprecated URL